gcc/testsuite/gfortran.dg/goacc/pr77371-2.f90
! PR fortran/77371
! { dg-do compile }
program p
   integer, allocatable :: n
!$acc parallel reduction (+:n) private(n) ! { dg-error "invalid private reduction" }
!$acc end parallel
end
